tests/languages/fixtures/rust/compile_fail_undeclared.stderr
error[E0425]: cannot find value `a` in this scope
 --> compile_fail_undeclared.rs:2:5
  |
2 |     a = 0;
  |     ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
